<resources>
    <string name="app_name">SCM</string>
    <string name="fcm_channel_id">SCM</string>
    <string name="choose_language">Choose your\nlanguage</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="turkish">Turkish</string>
    <string name="skip">SKIP</string>
    <string name="save">Save</string>
    <string name="OK">Ok</string>
    <string name="CANCEL">Cancel</string>
    <string name="next">Next</string>
    <string name="let_begin">Let\'s Begin</string>
    <string name="welcome_to_nibou">Welcome to SuperCars Majlis</string>
    <string name="step_survey">Events</string>
    <string name="step_secure">Promotions</string>
    <string name="step_value">Welcome to SCM,\nlets begin!</string>
    <string name="survey_description">Get notified about the latest events and RSVP to them using the app</string>
    <string name="secure_description">Get connected to our partners and get exclusive offers available only to SCM members.</string>
    <string name="value_description">You are only charged for the time taken by our therapists to interact with you.
    </string>
    <string name="welcome_description">Many brands, one passion.</string>
    <string name="new_user">Register\nyour interest</string>
    <string name="old_user">I am a\nreturning user</string>
    <string name="guest_user">Continue as a fan</string>
    <string name="sign_up">Sign up</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_condition">Terms &amp; Conditions</string>
    <string name="term_privacy">Your privacy if our number one priority. To understand we require this information.
        Please review our privacy policy and terms &amp; conditions.
    </string>
    <string name="full_name">Full Name</string>
    <string name="alias">Alias</string>
    <string name="alias_message">Expert will not get access to your name and will refer to you using your alias.
    </string>
    <string name="country">Country</string>
    <string name="country_message">We take this information to match you with the best available experts.</string>
    <string name="dob">DOB</string>
    <string name="sign_up_message">By signing up, you are agreeing to Nibou\'s terms &amp; conditions.</string>
    <string name="sign_up_success_message">You are now a member of SuperCars Majlis.</string>
    <string name="success">Success</string>
    <string name="continu">Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country_empty_alert">Please enter country name.</string>
    <string name="dob_empty_alert">Please select DOB.</string>
    <string name="survey_title">What can we help\nyou with today?</string>
    <string name="survey_sub_title">Select up to 3 options</string>
    <string name="what_trouble_you">What\'s Troubling you?</string>
    <string name="select_prefence">Select your\npreference</string>
    <string name="any_prefernce">I do not have any preference</string>
    <string name="female_prefernce">I prefer a female expert</string>
    <string name="male_prefernce">I prefer a male expert</string>
    <string name="survey_selection_alert">Please select atleast one option</string>
    <string name="please_wait">Please wait</string>
    <string name="please_wait_message">Please wait while we match you with the best available experts.</string>
    <string name="processing">Processing...</string>
    <string name="timing">Timing</string>
    <string name="focus">Focus</string>
    <string name="lanaguage">Language</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="add_review">Submit Feedback</string>
    <string name="thank_you">Thank you</string>
    <string name="review_success">Your reviews help Nibou maintain its high standards.</string>
    <string name="expert_list_title">Would you like to chat with an expert you have interacted with before?</string>
    <string name="new_expert_messgae">I would like to speak to a new expert</string>
    <string name="choose_previous_expert">Choose a previous expert</string>
    <string name="no_pdf_alert">No Pdf available</string>
    <string name="previous_expert_chat_alert">Want to chat with this expert?</string>
    <string name="timings">Timings</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="talk_different_issue">Talk about a\ndifferent issue</string>
    <string name="home_subtitle">What would you like to do today?</string>
    <string name="hello">Hello</string>
    <string name="message">Message</string>
    <string name="view_expert">View Expert</string>
    <string name="switch_expert">Switch Expert</string>
    <string name="message_copy_title">Would you like to send your previous chats to the new expert?</string>
    <string name="share_chat">Yes, Please share my chat history</string>
    <string name="not_share_chat">No, I\'d prefer to keep those private</string>
    <string name="retry">Retry</string>
    <string name="download">Download</string>
    <string name="image">Image</string>
    <string name="payment">Payment info</string>
    <string name="payment_message">In order to interact with a Nibou Expert, you will need to add a credit card to your
        account.\n\nYou will only be charged based on the time spent by and expert to analyze and respond to you.\n\nWe
        take security seriously so all your transactions are protected using our secure payment gateway.
    </string>
    <string name="redirect_payment">Redirected to\npayment gateway</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="card_number">Card Number</string>
    <string name="cardholder_name">Cardholder Name</string>
    <string name="cvv">CVV</string>
    <string name="expired">MM/YY</string>
    <string name="choose_default_card">Choose default card</string>
    <string name="add_card">Add Card</string>
    <string name="select_card">Select Card</string>
    <string name="visa">Visa</string>
    <string name="MASTERCARD">MASTERCARD</string>
    <string name="AMEX">AMEX</string>
    <string name="DISCOVER">DISCOVER</string>
    <string name="delete">Delete</string>
    <string name="expired_text">Expired</string>
    <string name="set_default_card">Set As Default Card</string>
    <string name="cardnumber_empty_alert">Please enter card number.</string>
    <string name="cardholder_empty_alert">Please enter cardholder name.</string>
    <string name="expiry_empty_alert">Please enter card expiry.</string>
    <string name="cvv_empty_alert">Please enter CVV number.</string>
    <string name="delete_alert">Are you sure, Do you want to delete this card?</string>
    <string name="doller">$</string>
    <string name="aed">AED</string>
    <string name="tl">TL</string>
    <string name="minutes">Mins</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="room">Room:</string>
    <string name="txn_id">Transaction Id:</string>
    <string name="expert">Expert Name:</string>
    <string name="earned">Amount:</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="cancelled">Cancelled</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_pwd">Change Password</string>
    <string name="language_menu">Choose Language</string>
    <string name="manage_cards">Manage Cards</string>
    <string name="transaction_hitstory">Transaction History</string>
    <string name="pricing_terms">Pricing and Terms</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="subject">Subject</string>
    <string name="logout_message">Are you sure, you want to logout?</string>
    <string name="feedback_star_alert">Please select the rating.</string>
    <string name="feedback_empty_alert">Please enter feedback message.</string>
    <string name="subject_empty_alert">Please enter subject.</string>
    <string name="feedback_success_alert">Feedback send successfully!</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new">Repeat Password</string>
    <string name="currentpwd_empty_alert">Please enter current password.</string>
    <string name="newpwd_empty_alert">Please enter new password.</string>
    <string name="repeatpwd_empty_alert">Please enter repeated password</string>
    <string name="pwd_length_alert">Password must be 6 digits or greater</string>
    <string name="pwd_mismatch_alert">Repeated password does not matched.</string>
    <string name="current_password_mismatch_alert">Current password does not matched.</string>
    <string name="pwd_change_success_alert">Password has been changed successfully.</string>
    <string name="pwd_change_failed_alert">Current password is entered wrong.</string>
    <string name="profile_change_success_alert">Profile has been updated successfully.</string>
    <string name="reserve_spot_alert">You have successfully registered for</string>
    <string name="unreserve_spot_alert">You have cancelled your registration successfully</string>
    <string name="expert_offline">Expert Offline</string>
    <string name="leave_message">Leave Message</string>
    <string name="card_error_alert">Invalid Card!</string>
    <string name="card_expired_alert">Your card has been expired.</string>
    <string name="authorization_failed">Authorization Failed!</string>
    <string name="timeout">Timeout, Please try again!</string>
    <string name="server_faliure">Server no responding!</string>
    <string name="wrong_with_backend">Something went wrong. Please try again!</string>
    <string name="internet_error">Internet connection lost!</string>
    <string name="error">Error</string>
    <string name="alert">ALERT</string>
    <string name="error_message">Incorrect username or password</string>
    <string name="already_registered_message">Emaild Id is already registered with another account.</string>
    <string name="forgot_password_error_alert">This account has not yet been created.</string>
    <string name="press_back_message">Press back again to Exit.</string>
    <string name="refresh_token_error_alert">Something went wrong. Please login again!</string>
    <string name="notifications">Notifications</string>
    <string name="group">Group</string>
    <string name="end">end</string>
    <string name="inactive_conversation">INACTIVE CONVERSATION</string>
    <string name="inactive_conversation_message">It\'s been over %1$s minutes since your last response to %2$s would you
        still like to continue this conversation ?
    </string>
    <string name="rating_push_message">Your chat session with %1$s has been ended. Please rate</string>
    <string name="expert_offline_message1">is currently offline and will be available</string>
    <string name="expert_offline_message2">You can switch to another expert or leave an offline message.
    </string>
    <string name="to">to</string>
    <string name="between">between</string>
    <string name="credit_card_title_alert">Credit Card Error</string>
    <string name="credit_card_message_alert">You do not have any valid credit cards in your account. Please add a valid
        card to continue chatting
    </string>
    <string name="no_expert_alert">All experts are currently offline, please try again later.</string>
    <string name="type_here">Type Here...</string>
</resources>