<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/pdf_bg"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <include
            android:id="@+id/toolbar"
            layout="@layout/my_toolbar" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_b"
            android:gravity="center|left"
            android:text="@string/edit_profile"
            android:textColor="@color/screen_title_color"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shadow_bg_drawable"
            android:fontFamily="@font/ubuntu_r"
            android:hint="@string/full_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/app_black_color_code"
            android:textColorHint="@color/hint_color"
            android:textDirection="locale"
            android:textSize="14sp"
            android:theme="@style/MyEditTextTheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/et_alias"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shadow_bg_drawable"
            android:enabled="false"
            android:focusable="false"
            android:fontFamily="@font/ubuntu_r"
            android:hint="@string/alias"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/disable_grey"
            android:textColorHint="@color/disable_grey"
            android:textDirection="locale"
            android:textSize="14sp"
            android:theme="@style/MyEditTextTheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shadow_bg_drawable"
            android:enabled="false"
            android:focusable="false"
            android:fontFamily="@font/ubuntu_r"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/disable_grey"
            android:textColorHint="@color/disable_grey"
            android:textDirection="locale"
            android:textSize="14sp"
            android:theme="@style/MyEditTextTheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_alias" />

        <EditText
            android:id="@+id/et_country"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shadow_bg_drawable"
            android:focusable="false"
            android:fontFamily="@font/ubuntu_r"
            android:hint="@string/country"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/app_black_color_code"
            android:textColorHint="@color/hint_color"
            android:textDirection="locale"
            android:textSize="14sp"
            android:theme="@style/MyEditTextTheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/shadow_bg_drawable"
            android:enabled="false"
            android:focusable="false"
            android:fontFamily="@font/ubuntu_r"
            android:hint="@string/dob"
            android:imeOptions="actionDone"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textAlignment="viewStart"
            android:textColor="@color/disable_grey"
            android:textColorHint="@color/disable_grey"
            android:textDirection="locale"
            android:textSize="14sp"
            android:theme="@style/MyEditTextTheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_country" />


        <TextView
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_b"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/save"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/app_black_color_code"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </android.support.constraint.ConstraintLayout>
</layout>
