<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@drawable/dialog_corner_drawable"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">

    <TextView
            android:id="@+id/title"
            android:gravity="center"
            android:layout_width="0dp"
            android:text="@string/sign_up"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:fontFamily="@font/ubuntu_b"
            android:textColor="@color/dialog_title_color"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:textAllCaps="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>


    <TextView
            android:id="@+id/message"
            android:gravity="center"
            android:layout_width="0dp"
            android:text="@string/sign_up_success_message"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingTop="10dp"
            android:visibility="invisible"
            android:paddingBottom="15dp"
            android:fontFamily="@font/ubuntu_r"
            android:textColor="@color/dialog_message_color"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <EditText
            android:id="@+id/edittext"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_editfield_drawable"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:paddingTop="15dp"
            android:paddingLeft="10dp"
            android:theme="@style/MyEditTextBlackTheme"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingBottom="15dp"
            android:fontFamily="@font/ubuntu_r"
            android:textColor="@color/app_black_color_code"
            android:textSize="14sp"
            android:hint="@string/type_here"
            android:textCursorDrawable="@null"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintBottom_toBottomOf="@+id/message"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:id="@+id/button"
            android:gravity="center"
            android:layout_width="0dp"
            android:text="@string/OK"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:fontFamily="@font/ubuntu_b"
            android:textColor="@color/dialog_title_color"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/message"
            android:textAllCaps="true"
            android:visibility="visible"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <TextView
            android:id="@+id/button1"
            android:gravity="center"
            android:layout_width="0dp"
            android:text="@string/CANCEL"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:paddingTop="30dp"
            android:paddingBottom="25dp"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:fontFamily="@font/ubuntu_b"
            android:textColor="@color/dialog_title_color"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/message"
            android:textAllCaps="true"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/button2"
            android:gravity="center"
            android:layout_width="0dp"
            android:text="@string/sign_up"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingTop="30dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="25dp"
            android:fontFamily="@font/ubuntu_b"
            android:textColor="@color/dialog_title_color"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/message"
            android:textAllCaps="true"
            app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>